platform/sample-app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-node-mysql
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-node-mysql
    app.kubernetes.io/part-of: deploy-lgtm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-node-mysql
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sample-mysql
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-mysql
    app.kubernetes.io/part-of: deploy-lgtm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: sample-mysql-exporter
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-mysql-exporter
    app.kubernetes.io/part-of: deploy-lgtm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-mysql-exporter
  ports:
    - name: metrics
      port: 9104
      targetPort: 9104
